; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_nanoxwin.c_ui_set_clip.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/net/tsclient/rdesktop/uiports/extr_nanoxwin.c_ui_set_clip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32 }

@g_clip = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@g_gc = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_set_clip(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  store i32 %10, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_clip, i32 0, i32 0), align 4
  %11 = load i32, i32* %6, align 4
  store i32 %11, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_clip, i32 0, i32 1), align 4
  %12 = load i32, i32* %7, align 4
  store i32 %12, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_clip, i32 0, i32 2), align 4
  %13 = load i32, i32* %8, align 4
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @g_clip, i32 0, i32 3), align 4
  %14 = call i32 (...) @GrNewRegion()
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = call i32 @GrUnionRectWithRegion(i32 %15, %struct.TYPE_3__* @g_clip)
  %17 = load i32, i32* @g_gc, align 4
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @GrSetGCRegion(i32 %17, i32 %18)
  ret void
}

declare dso_local i32 @GrNewRegion(...) #1

declare dso_local i32 @GrUnionRectWithRegion(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @GrSetGCRegion(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
